Onboarding endpoint (#30)
* fix: edit the html templates for waitlist and additional info

* feat: create email templates

* chore: add token to email templates

* chore: add token to email templates

* chore: add token to email templates

* feat: implement individual onboardinf endpoint

* Update JWT handling and documentation for Bearer token support

- Enhanced the `bearerToken` function to correctly extract JWTs from the Authorization header, supporting both "Bearer <token>" and bare token formats.
- Updated comments and documentation across multiple files to clarify the expected format for JWTs, improving developer understanding.
- Adjusted Swagger documentation to reflect the new description for Bearer authentication, ensuring consistency in API documentation.

This commit improves the handling of JWTs in the application and enhances the clarity of related documentation.

* feat: implement verify address

* fix: remove unnecessary file

* fix: remove unnecessary file

* fix: fix business type migration issue

---------
